Bug 56640 - [4.8 Regression] bootstrap failure on arm-linux-gnueabi{,hf}
Summary: [4.8 Regression] bootstrap failure on arm-linux-gnueabi{,hf}
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.8.0
: P3 normal
Target Milestone: 4.8.0
Assignee: Jakub Jelinek
URL:
Keywords: build
Depends on:
Blocks:
 
Reported: 2013-03-17 15:20 UTC by Matthias Klose
Modified: 2013-03-18 11:13 UTC (History)
1 user (show)

See Also:
Host:
Target: arm-linxux-gnueabihf arm-linxux-gnueabi
Build:
Known to work:
Known to fail: 4.8.0
Last reconfirmed: 2013-03-17 00:00:00


Attachments
gcc48-pr56640.patch (333 bytes, patch)
2013-03-17 16:25 UTC, Jakub Jelinek
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Klose 2013-03-17 15:20:45 UTC
seen with the 4.8.0 release candidate on arm-linux-gnueabi{,hf}

/build/buildd-gcc-4.8_4.8-20130315-1-armhf-5HYdhU/gcc-4.8-4.8-20130315/build/./prev-gcc/xg++ -B/build/buildd-gcc-4.8_4.8-20130315-1-armhf-5HYdhU/gcc-4.8-4.8-20130315/build/./prev-gcc/ -B/usr/arm-linux-gnueabihf/bin/ -nostdinc++ -B/build/buildd-gcc-4.8_4.8-20130315-1-armhf-5HYdhU/gcc-4.8-4.8-20130315/build/prev-arm-linux-gnueabihf/libstdc++-v3/src/.libs -B/build/buildd-gcc-4.8_4.8-20130315-1-armhf-5HYdhU/gcc-4.8-4.8-20130315/build/prev-arm-linux-gnueabihf/libstdc++-v3/libsupc++/.libs -I/build/buildd-gcc-4.8_4.8-20130315-1-armhf-5HYdhU/gcc-4.8-4.8-20130315/build/prev-arm-linux-gnueabihf/libstdc++-v3/include/arm-linux-gnueabihf -I/build/buildd-gcc-4.8_4.8-20130315-1-armhf-5HYdhU/gcc-4.8-4.8-20130315/build/prev-arm-linux-gnueabihf/libstdc++-v3/include -I/build/buildd-gcc-4.8_4.8-20130315-1-armhf-5HYdhU/gcc-4.8-4.8-20130315/src/libstdc++-v3/libsupc++ -L/build/buildd-gcc-4.8_4.8-20130315-1-armhf-5HYdhU/gcc-4.8-4.8-20130315/build/prev-arm-linux-gnueabihf/libstdc++-v3/src/.libs -L/build/buildd-gcc-4.8_4.8-20130315-1-armhf-5HYdhU/gcc-4.8-4.8-20130315/build/prev-arm-linux-gnueabihf/libstdc++-v3/libsupc++/.libs -c   -g -O2 -gtoggle -DIN_GCC   -fno-exceptions -fno-rtti -fasynchronous-unwind-tables -W -Wall -Wno-narrowing -Wwrite-strings -Wcast-qual -Wmissing-format-attribute -pedantic -Wno-long-long -Wno-variadic-macros -Wno-overlength-strings -Werror   -DHAVE_CONFIG_H -I. -I. -I../../src/gcc -I../../src/gcc/. -I../../src/gcc/../include -I../../src/gcc/../libcpp/include  -I../../src/gcc/../libdecnumber -I../../src/gcc/../libdecnumber/dpd -I../libdecnumber -I../../src/gcc/../libbacktrace -DCLOOG_INT_GMP    ../../src/gcc/ira.c -o ira.o
../../src/gcc/ira.c: In function 'void print_translated_classes(FILE*, bool)':
../../src/gcc/ira.c:1396:49: error: iteration 16u invokes undefined behavior [-Werror=aggressive-loop-optimizations]
     fprintf (f, " %s -> %s\n", reg_class_names[i],
                                                 ^
../../src/gcc/ira.c:1395:3: note: containing loop
   for (i = 0; i < N_REG_CLASSES; i++)
   ^
cc1plus: all warnings being treated as errors
make[5]: *** [ira.o] Error 1

configured with

Configured with: -v
	 --with-pkgversion='Debian 4.8-20130315-1'
	 --with-bugurl='file:///usr/share/doc/gcc-4.8/README.Bugs'
	 --enable-languages=c,c++,go,fortran,objc,obj-c++
	 --prefix=/usr
	 --program-suffix=-4.8
	 --enable-shared
	 --enable-linker-build-id
	 --libexecdir=/usr/lib
	 --without-included-gettext
	 --enable-threads=posix
	 --with-gxx-include-dir=/usr/include/c++/4.8
	 --libdir=/usr/lib
	 --enable-nls
	 --with-sysroot=/
	 --enable-clocale=gnu
	 --enable-libstdcxx-debug
	 --enable-libstdcxx-time=yes
	 --enable-gnu-unique-object
	 --disable-libitm
	 --enable-plugin
	 --with-system-zlib
	 --enable-objc-gc
	 --enable-multiarch
	 --disable-sjlj-exceptions
	 --with-arch=armv7-a
	 --with-fpu=vfpv3-d16
	 --with-float=hard
	 --with-mode=thumb
	 --enable-checking=release
	 --build=arm-linux-gnueabihf
	 --host=arm-linux-gnueabihf
	 --target=arm-linux-gnueabihf

and 

Configured with: -v
	 --with-pkgversion='Debian 4.8-20130315-1'
	 --with-bugurl='file:///usr/share/doc/gcc-4.8/README.Bugs'
	 --enable-languages=c,c++,go,fortran,objc,obj-c++
	 --prefix=/usr
	 --program-suffix=-4.8
	 --enable-shared
	 --enable-linker-build-id
	 --libexecdir=/usr/lib
	 --without-included-gettext
	 --enable-threads=posix
	 --with-gxx-include-dir=/usr/include/c++/4.8
	 --libdir=/usr/lib
	 --enable-nls
	 --with-sysroot=/
	 --enable-clocale=gnu
	 --enable-libstdcxx-debug
	 --enable-libstdcxx-time=yes
	 --enable-gnu-unique-object
	 --disable-libitm
	 --enable-plugin
	 --with-system-zlib
	 --enable-objc-gc
	 --enable-multiarch
	 --disable-sjlj-exceptions
	 --with-arch=armv4t
	 --with-float=soft
	 --enable-checking=release
	 --build=arm-linux-gnueabi
	 --host=arm-linux-gnueabi
	 --target=arm-linux-gnueabi
Comment 1 Matthias Klose 2013-03-17 15:23:03 UTC
this fails for my Debian builds, as seen in
https://buildd.debian.org/status/package.php?p=gcc-4.8&suite=experimental

but succeeds for my Ubuntu build (the hard float configuration):
https://launchpad.net/~ubuntu-toolchain-r/+archive/test/+build/4374070
Comment 2 Matthias Klose 2013-03-17 15:24:52 UTC
the Debian builds use glibc-2.13 and binutils 2.22.x., the Ubuntu build glibc-2.17 and binutils-2.23.x
Comment 3 Jakub Jelinek 2013-03-17 16:25:06 UTC
Created attachment 29683 [details]
gcc48-pr56640.patch

Untested fix.
Comment 4 Jakub Jelinek 2013-03-17 16:28:27 UTC
Author: jakub
Date: Sun Mar 17 16:28:16 2013
New Revision: 196753

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=196753
Log:
	PR target/56640
	* config/arm/arm.h (REG_CLASS_NAMES): Add "SFP_REG" and "AFP_REG"
	class names.  Remove trailing comma after "ALL_REGS".

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/arm/arm.h
Comment 5 Jakub Jelinek 2013-03-17 16:29:07 UTC
Author: jakub
Date: Sun Mar 17 16:28:55 2013
New Revision: 196754

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=196754
Log:
	PR target/56640
	* config/arm/arm.h (REG_CLASS_NAMES): Add "SFP_REG" and "AFP_REG"
	class names.  Remove trailing comma after "ALL_REGS".

Modified:
    branches/gcc-4_8-branch/gcc/ChangeLog
    branches/gcc-4_8-branch/gcc/config/arm/arm.h
Comment 6 Richard Biener 2013-03-18 11:13:06 UTC
Fixed.