re PR target/56640 (bootstrap failure on arm-linux-gnueabi{,hf})

PR target/56640
	* config/arm/arm.h (REG_CLASS_NAMES): Add "SFP_REG" and "AFP_REG"
	class names.  Remove trailing comma after "ALL_REGS".

From-SVN: r196754